<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginRegisLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ScrollView
        android:id="@+id/sv_loginregissetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_id_regispage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_nama_regispage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_nama_regispage"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/nama"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_username_regispage"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/username"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_password_regispage"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_email_regispage"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <LinearLayout
                android:id="@+id/layoutTextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sudahPunyaAkun"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_login_regispage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/login"
                    android:textColor="@color/blue" />

                <TextView
                    android:id="@+id/tv_register_regispage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/regis"
                    android:textColor="@color/blue" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login" />

            <Button
                android:id="@+id/btn_regis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/simpan" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
